force-app/main/default/objects/KickbackBank__c/KickbackBank__c.object-meta.xml
<CustomObject>
    <label>KickBack+Bank</label>
    <nameField>
        <displayFormat>KBB-{000000}</displayFormat>
        <label>KICKBACK+BANK ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KickBack+Bank</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>