force-app/main/default/objects/KickbackBank__c/fields/KickbackID__c.field-meta.xml
<CustomField>
    <fullName>KickbackID__c</fullName>
    <label>KICKBACK ID</label>
    <referenceTo>Kickback__c</referenceTo>
    <relationshipLabel>KICKBACK+BANK</relationshipLabel>
    <relationshipName>KickbankBank</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>