force-app/main/default/objects/KickbackBank__c/fields/UnpaidBalanceOfKickbackLocal__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfKickbackLocal__c</fullName>
    <formula>KickbackID__r.UnpaidBalance__c</formula>
    <label>UNPAID BALANCE OF KICKBACK(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>