force-app/main/default/objects/KickbackBank__c/fields/UnpaidBalanceOfKickbackUSD__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfKickbackUSD__c</fullName>
    <formula>KickbackID__r.UnpaidBalanceUSD__c</formula>
    <label>UNPAID BALANCE OF KICKBACK(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>